# mtga_polonize

./: .gitignore  README.rst  main.py  main.spec  pyproject.toml
.github/workflows/: main.yml
src/: polonizator.py  polonizator.spec  requirements.txt
tests/: test_autotrans.py
