[tool.poetry]
name = "autotrans"
version = "0.1.0"
description = ""
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
requests = "^2.25.1"
PySimpleGUI = "^4.35.0"
usersettings = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
pre-commit = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
